tests/fail/13_break_outside_loop.lang
// ОЖИДАЕТСЯ ОШИБКА: инструкция управления циклом вне цикла
функция Начало() : целое {
    если (истина) {
        прервать;
    }
    вернуть 0;
}
